--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "license": "ISC",
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
+        "@parcel/transformer-sass": "^2.0.0-beta.3.1",
         "normalize.css": "^8.0.1",
         "parcel": "^2.0.0-beta.3.1",
         "postcss-preset-env": "^6.7.0",
