--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
     "description": "",
     "scripts": {
         "start": "rm -rf dist && parcel ./src/index.html",
-        "build": "rm -rf dist && parcel build ./src/index.html"
+        "build": "rm -rf dist && parcel build ./src/index.html --public-url ./",
+        "deploy": "npm run build && gh-pages -d dist"
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
         "@parcel/transformer-sass": "^2.0.0-beta.3.1",
+        "gh-pages": "^3.2.3",
         "normalize.css": "^8.0.1",
         "parcel": "^2.0.0-beta.3.1",
         "postcss-preset-env": "^6.7.0",
