--- a/.browserslistrc
+++ b/.browserslistrc
@@ -1,3 +1,5 @@
-last 2 versions
-> 0.5%
-IE 11
+last 3 and_chr versions
+last 3 chrome versions
+last 3 opera versions
+last 3 ios_saf versions
+last 3 safari version
