--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "license": "AGPL3",
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
-        "@parcel/transformer-sass": "^2.0.0-beta.3.1",
         "gh-pages": "^3.2.3",
         "normalize.css": "^8.0.1",
-        "parcel": "^2.0.0-beta.3.1",
+        "parcel-bundler": "^1.12.5",
+        "postcss": "^8.3.6",
         "postcss-preset-env": "^6.7.0",
         "sass": "^1.35.2"
     },
