add "babel-polyfill" to solve async problem

--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     },
     "bugs": {
         "url": "https://github.com/rouanis5/password-generator/issues"
+    },
+    "dependencies": {
+        "babel-polyfill": "^6.26.0"
     }
 }
