--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
     "homepage": "https://github.com/rouanis5/password-generator#readme",
     "scripts": {
         "start": "rm -rf dist && parcel ./src/index.html",
-        "build": "rm -rf dist && parcel build ./src/index.html --public-url https://rouanis5.github.io/password-generator/",
-        "deploy": "npm run build && gh-pages -d dist"
+        "build": "rm -rf dist && parcel build ./src/index.html --public-url ./",
+        "buildForWeb": "rm -rf dist && parcel build ./src/index.html --public-url https://rouanis5.github.io/password-generator/",
+        "deploy": "npm run buildForWeb && gh-pages -d dist"
     },
     "author": "IDJA Mohamed Ouanis",
     "license": "AGPL3",
     "devDependencies": {
+        "@babel/core": "^7.15.0",
+        "@babel/plugin-transform-runtime": "^7.15.0",
         "@fortawesome/fontawesome-free": "^5.15.3",
         "gh-pages": "^3.2.3",
         "normalize.css": "^8.0.1",
