--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
         "@babel/core": "^7.15.0",
         "@babel/plugin-transform-runtime": "^7.15.0",
         "@fortawesome/fontawesome-free": "^5.15.3",
+        "@parcel/transformer-sass": "^2.3.2",
         "gh-pages": "^3.2.3",
         "normalize.css": "^8.0.1",
-        "parcel-bundler": "^1.12.5",
-        "postcss-preset-env": "^6.7.0",
+        "parcel": "^2.3.2",
+        "postcss-preset-env": "^7.4.1",
         "sass": "^1.35.2"
     },
     "repository": {
